@@ -13,7 +13,7 @@ bugs.kde.org number : none
 
 --- a/src/gui/kernel/qwidget_x11.cpp
 +++ b/src/gui/kernel/qwidget_x11.cpp
-@@ -768,6 +768,11 @@ void QWidgetPrivate::create_sys(WId wind
+@@ -773,6 +773,11 @@ void QWidgetPrivate::create_sys(WId wind
          Q_ASSERT(id);
          XChangeWindowAttributes(dpy, id, CWOverrideRedirect | CWSaveUnder,
                                  &wsa);
@@ -25,7 +25,7 @@ bugs.kde.org number : none
      } else if (topLevel && !desktop) {        // top-level widget
          if (!X11->wm_client_leader)
              create_wm_client_leader();
-@@ -821,13 +826,21 @@ void QWidgetPrivate::create_sys(WId wind
+@@ -826,13 +831,21 @@ void QWidgetPrivate::create_sys(WId wind
          // set EWMH window types
          setNetWmWindowTypes();
  
@@ -49,7 +49,7 @@ bugs.kde.org number : none
  
          // declare the widget's window role
          if (QTLWExtra *topData = maybeTopData()) {
-@@ -843,10 +856,6 @@ void QWidgetPrivate::create_sys(WId wind
+@@ -848,10 +861,6 @@ void QWidgetPrivate::create_sys(WId wind
          XChangeProperty(dpy, id, ATOM(WM_CLIENT_LEADER),
                          XA_WINDOW, 32, PropModeReplace,
                          (unsigned char *)&X11->wm_client_leader, 1);
