@@ -102,7 +102,7 @@ Forwarded: not-needed
      echo "Creating qmake. Please wait..."
  
      OLD_QCONFIG_H=
-@@ -8515,8 +8515,8 @@ QMAKE_ABSOLUTE_SOURCE_ROOT = \$\$QT_SOUR
+@@ -8517,8 +8517,8 @@ QMAKE_ABSOLUTE_SOURCE_ROOT = \$\$QT_SOUR
  QMAKE_MOC_SRC    = \$\$QT_BUILD_TREE/src/moc
  
  #local paths that cannot be queried from the QT_INSTALL_* properties while building QTDIR
@@ -113,7 +113,7 @@ Forwarded: not-needed
  QMAKE_UIC3       = \$\$QT_BUILD_TREE/bin/uic3
  QMAKE_RCC        = \$\$QT_BUILD_TREE/bin/rcc
  QMAKE_QDBUSXML2CPP = \$\$QT_BUILD_TREE/bin/qdbusxml2cpp
-@@ -8919,11 +8919,11 @@ EXEC=""
+@@ -8921,11 +8921,11 @@ EXEC=""
  
  echo "Finding project files. Please wait..."
  if [ "$CFG_NOPROCESS" != "yes" ]; then
@@ -127,7 +127,7 @@ Forwarded: not-needed
      fi
  fi
  
-@@ -9114,7 +9114,7 @@ for file in .projects .projects.3; do
+@@ -9112,7 +9112,7 @@ for file in .projects .projects.3; do
          QMAKE_SPEC_ARGS="-spec $SPEC"
          echo $ECHO_N "  for $a$ECHO_C"
  
