@@ -7,7 +7,7 @@ It breaks qmake projects search.
 
 --- a/configure
 +++ b/configure
-@@ -8976,7 +8976,7 @@ fi
+@@ -8978,7 +8978,7 @@ fi
  # .projects.3    -> the rest
  rm -f .projects .projects.1 .projects.2 .projects.3
  
