@@ -17,7 +17,7 @@ Author: Sune Vuorela <debian@pusling.com>
 +
  # Treat warnings as errors on x86/Linux/GCC
  linux-g++* {
-     isEqual(QT_ARCH,x86_64)|isEqual(QT_ARCH,i386): QMAKE_CXXFLAGS += -Werror
+     !CONFIG(standalone_package):isEqual(QT_ARCH,x86_64)|isEqual(QT_ARCH,i386): QMAKE_CXXFLAGS += -Werror
 --- /dev/null
 +++ b/src/3rdparty/webkit/Source/symbols.filter
 @@ -0,0 +1,5 @@
