@@ -17,7 +17,7 @@ Last-Update: 2011-12-26
 
 --- a/src/corelib/io/qprocess_unix.cpp
 +++ b/src/corelib/io/qprocess_unix.cpp
-@@ -525,6 +525,13 @@ static char **_q_dupEnvironment(const QP
+@@ -526,6 +526,13 @@ static char **_q_dupEnvironment(const QP
      return envp;
  }
  
@@ -31,15 +31,15 @@ Last-Update: 2011-12-26
  #ifdef Q_OS_MAC
  Q_GLOBAL_STATIC(QMutex, cfbundleMutex);
  #endif
-@@ -650,6 +657,7 @@ void QProcessPrivate::startProcess()
+@@ -647,6 +654,7 @@ void QProcessPrivate::startProcess()
  #if defined(Q_OS_QNX)
      pid_t childPid = spawnChild(workingDirPtr, argv, envp);
  #else
 +    debbug_561203();
      pid_t childPid = fork();
- #endif
      int lastForkErrno = errno;
-@@ -1352,6 +1360,7 @@ bool QProcessPrivate::startDetached(cons
+ #endif
+@@ -1340,6 +1348,7 @@ bool QProcessPrivate::startDetached(cons
      int pidPipe[2];
      qt_safe_pipe(pidPipe);
  
@@ -47,7 +47,7 @@ Last-Update: 2011-12-26
      pid_t childPid = fork();
      if (childPid == 0) {
          struct sigaction noaction;
-@@ -1364,6 +1373,7 @@ bool QProcessPrivate::startDetached(cons
+@@ -1352,6 +1361,7 @@ bool QProcessPrivate::startDetached(cons
          qt_safe_close(startedPipe[0]);
          qt_safe_close(pidPipe[0]);
  
