@@ -42,7 +42,7 @@ Bug: https://bugreports.qt.nokia.com/browse/QTBUG-21900
  static void qt_x11_create_intern_atoms()
  {
      const char *names[QX11Data::NAtoms];
-@@ -5273,8 +5294,11 @@ bool QETWidget::translateConfigEvent(con
+@@ -5281,8 +5302,11 @@ bool QETWidget::translateConfigEvent(con
          if (d->extra->compress_events) {
              // ConfigureNotify compression for faster opaque resizing
              XEvent otherEvent;
@@ -56,7 +56,7 @@ Bug: https://bugreports.qt.nokia.com/browse/QTBUG-21900
                  if (qt_x11EventFilter(&otherEvent))
                      continue;
  
-@@ -5287,13 +5311,19 @@ bool QETWidget::translateConfigEvent(con
+@@ -5295,13 +5319,19 @@ bool QETWidget::translateConfigEvent(con
                  newSize.setWidth(otherEvent.xconfigure.width);
                  newSize.setHeight(otherEvent.xconfigure.height);
  
@@ -77,7 +77,7 @@ Bug: https://bugreports.qt.nokia.com/browse/QTBUG-21900
              }
  #ifndef QT_NO_XSYNC
              qt_sync_request_event_data sync_event;
-@@ -5306,9 +5336,14 @@ bool QETWidget::translateConfigEvent(con
+@@ -5314,9 +5344,14 @@ bool QETWidget::translateConfigEvent(con
          }
  
          if (!isCPos) {
