@@ -15,6 +15,7 @@ qt4-x11 (4:4.8.1-1) UNRELEASED; urgency=low
 
   [ Felix Geyer ]
   * Drop fix_ftbfs_format-security.patch, fixed upstream.
+  * Refresh patches for the new upstream version.
 
  -- Fathi Boudra <fabo@debian.org>  Wed, 04 Jan 2012 22:15:56 +0200
 
